fixed more color contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,20 @@ div.elementor-element.elementor-element-01c13fd.elementor-widget.elementor-widge
 #copyright_text {
     color: rgba(255, 255, 255, 0.5);
 }
+
+div.elementor-element.elementor-element-54f6b4d6.e-flex.e-con-boxed.e-con.e-parent {
+    background-color: #797572 !important;
+}
+
+section.elementor-section.elementor-top-section.elementor-element.elementor-element-23068cdb.elementor-section-boxed.elementor-section-height-default.elementor-section-height-default {
+    background-color: #797572 !important;
+}
+
+div.elementor-column.elementor-col-33.elementor-top-column.elementor-element.elementor-element-20b2bdf5 {
+    background-color: #797572 !important;
+}
+
+#explore_section {
+    background-color: #797572 !important;
+
+}
